--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
             height:40px;
             width:40px;
             position:absolute;
+            border-radius:50px;
         }
         </style>
         <title>Rxjs Demo</title>
